--- a/Project Vista/Project/index.html
+++ b/Project Vista/Project/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vista AI Image Generator</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="Logo.png">
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="visual" viewBox="0 0 900 600"  version="1.1"><rect width="100vw" height="100vw" fill="#001829"/><g><g transform="translate(876 183)"><path d="M0 -147L127.3 -73.5L127.3 73.5L0 147L-127.3 73.5L-127.3 -73.5Z" fill="#297EA6"/></g><g transform="translate(101 104)"><path d="M0 -130L112.6 -65L112.6 65L0 130L-112.6 65L-112.6 -65Z" fill="#297EA6"/></g><g transform="translate(504 589)"><path d="M0 -144L124.7 -72L124.7 72L0 144L-124.7 72L-124.7 -72Z" fill="#297EA6"/></g></g></svg>
